# trueworld

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
assets/config/: items.toml  monsters.toml  skills.toml
crates/ai/action/: Cargo.toml
crates/ai/action/src/: lib.rs
crates/ai/asr/: Cargo.toml
crates/ai/asr/src/: lib.rs  models.rs  vad.rs
crates/ai/nlp/: Cargo.toml
crates/ai/nlp/src/: lib.rs
crates/ai/perception/: Cargo.toml
crates/ai/perception/src/: camera.rs  detector.rs  gesture.rs  lib.rs  tracker.rs
crates/bevy/character/: Cargo.toml
crates/bevy/character/src/: lib.rs
crates/bevy/combat/: Cargo.toml
crates/bevy/combat/src/: lib.rs
crates/bevy/input-fusion/: Cargo.toml
crates/bevy/input-fusion/src/: fusion.rs  lib.rs  sources.rs
crates/bevy/voice-camera/: Cargo.toml
crates/bevy/voice-camera/src/: lib.rs
crates/client/: Cargo.toml
crates/client/src/: app.rs  connection.rs  input.rs  main.rs  net_sync.rs  network.rs  state.rs
crates/client/src/movement/: correction.rs  mod.rs  plugin.rs  prediction.rs
crates/client/src/render/: animation.rs  camera.rs  mod.rs  sprite.rs  sync.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  id.rs  lib.rs  math.rs  net.rs  time.rs  types.rs
crates/core/tests/: id_tests.rs
crates/network/p2p/: Cargo.toml
crates/network/p2p/src/: lib.rs
crates/network/renet-adapter/: Cargo.toml
crates/network/renet-adapter/src/: lib.rs
crates/network/voice-chat/: Cargo.toml
crates/network/voice-chat/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: channel.rs  client.rs  lib.rs  server.rs
crates/protocol/tests/: serialization_tests.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  database.rs  entity.rs  game.rs  main.rs  network.rs  player.rs  room.rs  server.rs  shutdown.rs
crates/server/src/movement/: config.rs  mod.rs  update.rs  validation.rs
docs/api/: movement-protocol.md
docs/architecture/: movement-system.md
docs/plans/: 2026-02-24-core-implementation.md  2026-03-01-client-movement-design.md  2026-03-01-client-movement-implementation.md
docs/prd/: movement-system.md
services/ai-inference/: Cargo.toml
services/ai-inference/src/: inference.rs  main.rs
services/matchmaker/: Cargo.toml
services/matchmaker/src/: main.rs  matchmaker.rs
services/signaling/: Cargo.toml
services/signaling/src/: main.rs  signaling.rs
