[package]
name = "trueworld-core"
version = "0.1.0-alpha"
edition = "2021"

[dependencies]
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
thiserror = "2.0"
anyhow = "1.0"

# 异步
async-trait = "0.1"
futures = "0.3"

# 时间
chrono = "0.4"

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# 数学
glam = { version = "0.29", features = ["serde"] }
nalgebra = { version = "0.33", features = ["serde-serialize"] }

# 工具
derive_more = { version = "2.1.1", features = ["from", "display", "error"] }
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26"

# 日志
tracing = "0.1"

# 性能
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.10"

# 网络类型
bytes = "1.7"

[features]
default = []
std = []
