[package]
name = "trueworld-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
# Core
trueworld-core = { path = "../core" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Network
renet = { workspace = true }

# UUID
uuid = { workspace = true }

# Time
chrono = { workspace = true, features = ["serde"] }

# Math
glam = { workspace = true }

# Utilities
derive_more = { workspace = true }
strum = { workspace = true }
