[package]
name = "ai-inference-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ai-inference"
path = "src/main.rs"

[dependencies]
# Web
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
